--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,313 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&family=Poppins:wght@300;400;500;600;700&display=swap');
+
+:root{
+    --primary-font: 'Poppins', sans-serif;
+    --headline-font: 'Montserrat Alternates', sans-serif;
+
+    --primary: #B42AC0;
+    --primary-light: #E9AEEE;
+    --schedule-color: #535252;
+    --text-color: #000000;
+    --text-color-light: rgba(0,0,0, .75);
+    --btn-text-color: #fff;
+    --bg-color: #FDF2F2;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    font-size: 62.5%;
+    font-family: var(--primary-font);
+}
+
+html body{
+    font-size: 1.6rem;
+    background: var(--bg-color);
+}
+
+h1, h2, h3, h4{
+    font-family: var(--headline-font);
+    margin: 0;
+    padding: 0;
+    padding-bottom: .5rem;
+    color: var(--text-color);
+    /* font-size: 2rem; */
+}
+
+img{
+    max-width: 100%;
+}
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.btn{
+    border-radius: 15px;
+    font-size: 1.4rem;
+    padding: 0.5rem 1.5rem;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+}
+
+.app{
+    width: 900px;
+    margin: 0 auto;
+    /* height: 100vh; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.app .container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 2rem;
+}
+
+.container .schedule{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin-bottom: 1.9rem;
+}
+
+.container .schedule .btn{
+    background: var(--schedule-color);
+    color: var(--btn-text-color);
+}
+
+.container .schedule .circle{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: var(--schedule-color);
+}
+
+.app .container .meetings-btn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin-bottom: 1.7rem;
+}
+
+.container .meetings-btn .btn{
+    background: var(--primary);
+    color: var(--text-color);
+    font-size: 1.6rem;
+}
+
+.container .meetings-btn span{
+    display: block;
+}
+
+.container .meetings-btn .meeting-title{
+    font-weight: 700;
+}
+
+.container .meetings-btn .meeting-date{
+    color: var(--text-color-light);
+}
+
+
+.blocks{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    gap: 2rem;
+}
+
+.blocks .btn{
+    transition: all 0.4s ease;
+    background: var(--primary);
+}
+
+.blocks .btn:hover{
+    background: #FBE6FF;
+}
+
+.block-1 .list, .block-2 .block-content{
+    margin-bottom: 1.7rem;
+}
+
+.block-2 .block-content{
+    background: var(--primary);
+}
+
+.block-2 .block-content .list{
+    height: 300px;
+}
+
+.block-1 .list,
+.block-2 .list{
+    padding: 1rem;
+    background: white;
+    overflow-y: auto;
+}
+
+.block-1 .list{
+    height: 400px;
+    border-radius: 20px;
+}
+
+.block-2 .block-content .title,
+.block-2 .block-content .date{
+    text-align: center;
+    margin: 0;
+    padding: 1rem;
+    color: white;
+}
+
+.block-2 .block-content .title{
+    font-size: 1.8rem;
+    font-weight: 700;
+    border-bottom: 3px solid white;
+}
+
+.block-2 .block-content .date{
+    font-size: 1.4rem;
+    font-weight: 500;
+    border-top: 3px solid white;
+}
+
+.list-item{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+
+    padding: .5rem 1rem;
+    margin-bottom: 1rem;
+    border-radius: 18px;
+    background: #FDF3FF;
+    transition: all 0.4s ease;
+}
+
+.list-item:hover, .list-item.active{
+    background: var(--primary-light);
+}
+
+.list-item .detail{
+    flex: 1;
+
+    display: flex;
+    align-items: center;
+}
+
+.list-item .detail .detail-text{
+    margin-left: 2rem;
+}
+
+
+.block-1 .list .detail img,
+.block-2 .list .detail img{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: 3px solid var(--btn-text-color);
+}
+
+.block-1 .list .detail-text h3,
+.block-2 .list .detail-text h3{
+    margin: 0;
+    padding-bottom: .5rem;
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--text-color);
+}
+
+.block-1 .list .detail-text p,
+.block-2 .list .detail-text p{
+    font-size: 1.2rem;
+    margin: 0;
+    color: var(--text-color-light);
+}
+
+
+/* add attendant form styling  */
+.add-attendant{
+    height: 150px;
+    background: var(--primary-light);
+    margin-bottom: 1.7rem;
+    padding: 2rem;
+    border-radius: 20px;
+    position: relative;
+}
+
+.add-attendant .btn{
+    position: absolute;
+    bottom: 1rem;
+    right: 4.5rem;
+    background: #FDF3FF;
+    transition: all 0.4s ease;
+}
+
+.add-attendant .btn:hover{
+    background: var(--primary);
+}
+
+.add-attendant .group{
+    width: 100%;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.group label{
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+.group input{
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin-left: 2rem;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+}
+
+/* modal styling  */
+.modal{
+    position: absolute;
+    top: 0;
+    /* bottom: 0; */
+    height: 100%;
+    width: 100%;
+}
+
+.hidden{
+    display: none;
+}
+
+.modal .overlay{
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0, .6);
+}
+
+.modal .modal-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal .add-attendant{
+    height: 130px;
+}
+
+.modal .add-attendant .btn{
+    right: 3rem;
+}
+
+.above{
+  font-size: 2rem;
+  font-weight: 500;
+  color: #000000;
 }
